--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ body {
 }
 
 .header-logo {
-    font-size: 1.8em;
-    margin-right: 10px;
+    font-size: 2.5em;
+    margin-right: 5px;
+    margin-top: -0.25em;
 }
 
 .header-text h1 {
@@ -92,9 +93,7 @@ body {
     flex-direction: column;
     align-items: center;
     min-width: 150px;
-    padding: 15px 5px;
-    justify-content: space-evenly;
-
+    padding: 10px 5px;
 }
 
 .column-right {
@@ -219,6 +218,7 @@ body {
     display: inline-block;
     width: 50px;
     height: 28px;
+    flex-shrink: 0;
 }
 
 .toggle-switch input {
@@ -278,45 +278,64 @@ input:checked+.switch-lever:before {
     transform: translateY(.4rem);
 }
 
-@media (max-width: 360px) and (orientation: landscape) {
-    .app-header {
-        padding: 10px;
+.header-actions {
+    display: flex;
+    align-items: center;
+}
+
+.header-actions label[for="gestureToggle"] {
+    cursor: pointer;
+}
+
+.header-actions .toggle-switch {
+    width: 45px;
+    height: 25px;
+}
+
+.header-actions .toggle-switch .switch-lever:before {
+    height: 20px;
+    width: 20px;
+    left: 2px;
+    bottom: 2px;
+}
+
+.header-actions .toggle-switch input:checked+.switch-lever {
+    background-color: #2ecc71;
+}
+
+.header-actions .toggle-switch input:checked+.switch-lever:before {
+    transform: translateX(21px);
+}
+
+.header-actions .switch-lever {
+    width: 90%;
+    height: 90%;
+}
+
+.feedback-display {
+    width: 95%;
+    color: #ecf0f1;
+    border-radius: 8px;
+    /* background-color: #34495e; */
+    transition: all 0.2s ease-in-out;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.35);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (orientation: landscape) {
+    .header-actions {
+        margin-right: 0.3em;
     }
 
-    .header-text h1 {
-        font-size: 0.8em;
+    .column-middle {
+        justify-content: space-evenly;
     }
 
-    .header-text p {
-        font-size: 0.6em;
-    }
-
-    .header-actions span {
-        font-size: 1em;
-        margin-left: 10px;
-    }
-
-    .controls-area {
-        padding: 10px;
-        gap: 8px;
-    }
-
-    .column-left,
-    .column-middle,
-    .column-right {
-        min-width: 70px;
-    }
-
-    .icon-btn {
-        padding: 8px 12px;
-    }
-
-    .column-right .control-btn {
-        min-height: calc(60px * 2 + 8px);
-    }
-
-    .column-left .control-btn {
-        min-height: 60px;
+    .feedback-display {
+        font-size: clamp(2em, 35vmin, 6em);
     }
 }
 
@@ -329,7 +348,20 @@ input:checked+.switch-lever:before {
         top: 50%;
         left: 50%;
 
-        /* Rotasi 90 derajat untuk orientasi 'potret' */
+        /* Rotate 90⁰ for 'portrait' orientation */
         transform: translate(-50%, -50%) rotate(90deg);
+    }
+
+    .header-actions {
+        margin-right: 0.6em;
+    }
+
+    .column-middle {
+        justify-content: space-between;
+    }
+
+    .feedback-display {
+        width: 85%;
+        font-size: clamp(2em, 20vmin, 6em);
     }
 }
