--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ body {
 }
 
 .header-logo {
-    font-size: 2.5em;
-    margin-right: 5px;
+    font-size: 2.25em;
+    margin-right: 8px;
     margin-top: -0.25em;
 }
 
@@ -304,7 +304,7 @@ input:checked+.switch-lever:before {
 }
 
 .header-actions .toggle-switch input:checked+.switch-lever:before {
-    transform: translateX(21px);
+    transform: translateX(18px);
 }
 
 .header-actions .switch-lever {
@@ -317,7 +317,7 @@ input:checked+.switch-lever:before {
     color: #ecf0f1;
     border-radius: 8px;
     /* background-color: #34495e; */
-    transition: all 0.2s ease-in-out;
+    /* transition: all 0.2s ease-in-out; */
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.35);
 
     display: flex;
@@ -361,7 +361,8 @@ input:checked+.switch-lever:before {
     }
 
     .feedback-display {
-        width: 85%;
-        font-size: clamp(2em, 20vmin, 6em);
+        width: 75%;
+        font-size: clamp(2em, 18vmin, 6em);
+        padding: 0.1em 0;
     }
 }
