--- a/style.css
+++ b/style.css
@@ -564,5 +564,6 @@ input:checked+.switch-lever:before {
         width: 85%;
         font-size: clamp(2em, 18vmin, 6em);
         box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.35);
+        min-height: 25vmin;
     }
 }
